--- a/code/doc/接口文档.md
+++ b/code/doc/接口文档.md
@@ -120,7 +120,144 @@
 
 ---
 
-## 3. 全局错误代码
+## 3. 文件管理接口
+
+### 3.1 文件上传接口
+
+该接口用于用户上传文件，输入包括文件名称和文件内容，返回文件上传的唯一标识符。
+
+- **URL**: `/api/v1/files/upload`
+- **方法**: `POST`
+- **请求头**: `Content-Type: multipart/form-data`
+- **请求体**:
+  ```
+  file_name: "document.pdf"
+  file: <binary data>
+  ```
+
+- **响应体**:
+    - 成功：
+      ```json
+      {
+        "file_id": "file-20231025001"
+      }
+      ```
+    - 错误：
+      ```json
+      {
+        "error": "Invalid file format"
+      }
+      ```
+
+### 3.2 输入说明
+
+- **file_name** (`string`): 上传文件的原始名称
+- **file** (`binary`): 上传的文件内容
+
+### 3.3 输出说明
+
+- **file_id** (`string`): 上传成功后返回的文件唯一标识符
+
+### 3.4 错误代码
+
+- `201 Created` – 文件上传成功
+- `400 Bad Request` – 参数校验失败或文件格式错误
+- `413 Payload Too Large` – 文件大小超过限制
+
+---
+
+### 3.5 文件列表查询接口
+
+该接口用于查询已上传的文件列表。
+
+- **URL**: `/api/v1/files/list`
+- **方法**: `GET`
+- **请求头**: 无
+
+- **响应体**:
+    - 成功：
+      ```json
+      {
+        "files": [
+          {
+            "file_id": "file-20231025001",
+            "file_name": "document.pdf",
+            "file_description": "Thesis submission guidelines"
+          },
+          {
+            "file_id": "file-20231025002",
+            "file_name": "image.png",
+            "file_description": "Campus Map"
+          }
+        ]
+      }
+      ```
+    - 错误：
+      ```json
+      {
+        "error": "Internal server error"
+      }
+      ```
+
+### 3.6 文件列表查询接口输入说明
+
+- 无输入参数
+
+### 3.7 文件列表查询接口输出说明
+
+- **files** (`array of objects`): 文件信息列表
+    - **file_id** (`string`): 文件唯一标识符
+    - **file_name** (`string`): 文件名称
+    - **file_description** (`string`): 文件描述
+
+### 3.8 错误代码
+
+- `200 OK` – 查询成功
+- `500 Internal Server Error` – 服务器内部错误
+
+---
+
+### 3.9 文件下载接口
+
+该接口用于用户下载已上传的文件。
+
+- **URL**: `/api/v1/files/download/{file_id}`
+- **方法**: `GET`
+- **请求头**: 无
+
+- **响应体**:
+    - 成功：
+      ```
+      Content-Disposition: attachment; filename="yourfile.ext"
+      Content-Type: application/octet-stream
+
+      <binary data>
+      ```
+    - 错误：
+      ```json
+      {
+        "error": "File not found"
+      }
+      ```
+
+### 3.10 文件下载接口输入说明
+
+- **file_id** (`string`): 需要下载的文件唯一标识符
+
+### 3.11 文件下载接口输出说明
+
+- 返回文件的二进制数据流，并附带文件名和相应的MIME类型。
+
+### 3.12 错误代码
+
+- `200 OK` – 文件下载成功
+- `404 Not Found` – 文件不存在
+- `429 Too Many Requests` – 请求超过频率限制
+- `500 Internal Server Error` – 服务器内部错误
+
+---
+
+## 4. 全局错误代码
 
 - `404 Not Found` – 接口路径不存在
 - `500 Internal Server Error` – 服务器内部错误
