--- a/code/doc/接口文档.md
+++ b/code/doc/接口文档.md
@@ -1,10 +1,10 @@
-# RAGnition RESTful API设计
+# RAGnition RESTful API 设计
 
 ## 1. 用户提问接口
 
 ### 1.1 接口说明
 
-该接口用于用户提问，输入包括当前会话窗口ID、多轮对话历史问题列表和当前对话问题，返回包括当前会话窗口ID、当前回答、回答参考的原文片段列表和回答引用的原文链接列表。
+该接口用于用户提问，输入包括当前会话窗口 ID、多轮对话历史问题列表和当前对话问题，返回包括当前会话窗口 ID、当前回答、回答参考的原文片段列表。
 
 - **URL**: `/api/v1/questions`
 - **方法**: `POST`
@@ -30,12 +30,11 @@
         "question_id": "1700000000",
         "answer": "No, you cannot submit your thesis after the deadline.",
         "references": [
-          "Reference 1: Content snippet from the Student Handbook.",
-          "Reference 2: Content snippet from the Thesis Submission Rules."
-        ],
-        "reference_links": [
-          "http://example.com/handbook#thesis",
-          "http://example.com/rules#submission"
+          {
+            "content": "4 At the end of the term in which the student on academic probation has cumulatively enrolled in 6 or more credits, if he/she obtains a Cumulative GPA of 2.",
+            "source": "pieces /MScDS_Student_Handbook_2024-25_segmented.txt",
+            "similarity": "22%"
+          }
         ]
       }
       ```
@@ -48,18 +47,20 @@
 
 ### 1.2 输入说明
 
-- **session_id** (`string`): 当前会话的ID，用于标识该会话
-- **question_id** (`string`): 当前问题的ID，用于标识该问题
+- **session_id** (`string`): 当前会话的 ID，用于标识该会话
+- **question_id** (`string`): 当前问题的 ID，用于标识该问题
 - **previous_questions** (`array of strings`): 当前会话中的多轮对话历史问题列表
 - **current_question** (`string`): 当前用户提问的问题
 
 ### 1.3 输出说明
 
-- **session_id** (`string`): 返回与输入相同的会话ID
-- **question_id** (`string`): 返回与输入相同的问题ID
+- **session_id** (`string`): 返回与输入相同的会话 ID
+- **question_id** (`string`): 返回与输入相同的问题 ID
 - **answer** (`string`): 系统生成的当前回答
-- **references** (`array of strings`): 回答参考的原文片段列表
-- **reference_links** (`array of strings`): 参考片段的原文链接列表
+- **references** (`array of objects`): 回答参考的原文片段列表
+    - **content** (`string`): 参考内容
+    - **source** (`string`): 参考来源文件路径
+    - **similarity** (`string`): 相似度百分比
 
 ### 1.4 错误代码
 
@@ -72,7 +73,7 @@
 
 ### 2.1 接口说明
 
-该接口用于用户提交对系统回答的反馈，输入包括会话ID、问题ID、评分和可选评价，返回反馈记录的唯一ID。
+该接口用于用户提交对系统回答的反馈，输入包括会话 ID、问题 ID、评分和可选评价，返回反馈记录的唯一 ID。
 
 - **URL**: `/api/v1/feedback`
 - **方法**: `POST`
@@ -103,14 +104,14 @@
 
 ### 2.2 输入说明
 
-- **session_id** (`string`): 当前会话的ID，用于标识该会话
-- **question_id** (`string`): 当前问题的ID，用于标识该问题
-- **rating** (`integer`): 用户评分（1-10分整数）
+- **session_id** (`string`): 当前会话的 ID，用于标识该会话
+- **question_id** (`string`): 当前问题的 ID，用于标识该问题
+- **rating** (`integer`): 用户评分（1-10 分整数）
 
 ### 2.3 输出说明
 
-- **session_id** (`string`): 返回与输入相同的会话ID
-- **question_id** (`string`): 返回与输入相同的问题ID
+- **session_id** (`string`): 返回与输入相同的会话 ID
+- **question_id** (`string`): 返回与输入相同的问题 ID
 
 ### 2.4 错误代码
 
@@ -182,12 +183,16 @@
           {
             "file_id": "file-20231025001",
             "file_name": "document.pdf",
-            "file_description": "Thesis submission guidelines"
+            "file_description": "Thesis submission guidelines",
+            "upload_date": "2025-03-13",
+            "file_size": "1.2MB"
           },
           {
             "file_id": "file-20231025002",
             "file_name": "image.png",
-            "file_description": "Campus Map"
+            "file_description": "Campus Map",
+            "upload_date": "2025-03-12",
+            "file_size": "500KB"
           }
         ]
       }
@@ -209,55 +214,11 @@
     - **file_id** (`string`): 文件唯一标识符
     - **file_name** (`string`): 文件名称
     - **file_description** (`string`): 文件描述
+    - **upload_date** (`string`): 文件上传日期
+    - **file_size** (`string`): 文件大小
 
 ### 3.8 错误代码
 
 - `200 OK` – 查询成功
 - `500 Internal Server Error` – 服务器内部错误
 
----
-
-### 3.9 文件下载接口
-
-该接口用于用户下载已上传的文件。
-
-- **URL**: `/api/v1/files/download/{file_id}`
-- **方法**: `GET`
-- **请求头**: 无
-
-- **响应体**:
-    - 成功：
-      ```
-      Content-Disposition: attachment; filename="yourfile.ext"
-      Content-Type: application/octet-stream
-
-      <binary data>
-      ```
-    - 错误：
-      ```json
-      {
-        "error": "File not found"
-      }
-      ```
-
-### 3.10 文件下载接口输入说明
-
-- **file_id** (`string`): 需要下载的文件唯一标识符
-
-### 3.11 文件下载接口输出说明
-
-- 返回文件的二进制数据流，并附带文件名和相应的MIME类型。
-
-### 3.12 错误代码
-
-- `200 OK` – 文件下载成功
-- `404 Not Found` – 文件不存在
-- `429 Too Many Requests` – 请求超过频率限制
-- `500 Internal Server Error` – 服务器内部错误
-
----
-
-## 4. 全局错误代码
-
-- `404 Not Found` – 接口路径不存在
-- `500 Internal Server Error` – 服务器内部错误
